SERVER-53276: Clean up references to donor RSM after migration completes