jstests/replsets/tenant_migration_concurrent_migrations.js
@@ -96,12 +96,11 @@ const kTenantIdPrefix = "testTenantId";
     const connPoolStatsAfter1 = assert.commandWorked(donorPrimary.adminCommand({connPoolStats: 1}));
     assert.eq(Object.keys(connPoolStatsAfter1.replicaSets).length, 0);
 
-    // TODO: SERVER-53276 the RSM from recipient rst1 to donor rst0 is not deleted.
-    // assert.eq(
-    //     Object.keys(assert.commandWorked(rst1.getPrimary().adminCommand({connPoolStats:
-    //     1})).replicaSets)
-    //         .length,
-    //     0);
+    assert.eq(Object
+                  .keys(assert.commandWorked(rst1.getPrimary().adminCommand({connPoolStats: 1}))
+                            .replicaSets)
+                  .length,
+              0);
 })();
 
 // Test concurrent incoming migrations from different donors.
@@ -148,11 +147,9 @@ const kTenantIdPrefix = "testTenantId";
         assert.commandWorked(rst0.getPrimary().adminCommand({connPoolStats: 1}));
     assert.eq(Object.keys(connPoolStatsAfter0.replicaSets).length, 0);
 
-    // TODO: SERVER-53276 the RSM from recipient rst1 to donor rst0 is not deleted in the test
-    // above.
-    //  const connPoolStatsAfter1 =
-    //     assert.commandWorked(rst1.getPrimary().adminCommand({connPoolStats: 1}));
-    //  assert.eq(Object.keys(connPoolStatsAfter1.replicaSets).length, 0);
+    const connPoolStatsAfter1 =
+        assert.commandWorked(rst1.getPrimary().adminCommand({connPoolStats: 1}));
+    assert.eq(Object.keys(connPoolStatsAfter1.replicaSets).length, 0);
 })();
 
 // Test concurrent outgoing migrations to same recipient. Verify that tenant
